Podcast in badge engebunden

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Die Nationalparks Österreichs</title>
 
-     <!-- Font Awesome -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
@@ -49,8 +49,14 @@
             </nav>
         </header>
         <article>
-            <div class="summary-badge">
-                <i class="fas fa-download"></i> <a href="/bericht.pdf">Download Bericht</a>
+            <div>
+                <div class="summary-badge">
+                    <i class="fas fa-download"></i> <a href="/bericht.pdf">Download Bericht</a>
+                </div>
+                <div class="summary-badge">
+                    <i class="fa-solid fa-globe"></i> <a href="https://open.spotify.com/episode/0QW2yHDGc9bnermSFzWUMj?si=9bJZxUe4R5Oq5vXsIr6bvg&context=spotify%3Ashow%3A5nuWzV1UZ3RAXeANbm9WKI&t=16e
+                    ">Podcast zu Nationalparks</a>
+                </div>
             </div>
             <p>Vom Steppensee bis zum Hochgebirge, von der Waldwildnis bis zur Au, vom tosenden Fluss bis zum sanften
                 Tal: Als international anerkannte Schutzgebiete wah-ren die sechs österreichischen Nationalparks
@@ -63,8 +69,6 @@
                 Die Standorte der Nationalparks sowie eine Vorhersage über Wind und Wetter <em>(zur besseren Planung
                     Ihres Ausflugs)</em> entnehmen Sie der nachfolgenden Karte.
             </p>
-            <p><a href="https://www.nationalparksaustria.at/de/" target="_blank">Offizielle Website der
-                    Nationalparks</a></p>
             <div id="map"></div>
             <div id="wikipedia-content">
                 <h3>Wikipedia Informationen</h3>
