--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <div>
                 <div class="summary-badge">
                     <i class="fas fa-download"></i> <a href="/bericht.pdf">Download Bericht</a>
+                    <i class="fas fa-download"></i> <a href="/konzept.pdf">Download Konzept</a>
                 </div>
                 <div class="summary-badge">
                     <i class="fa-solid fa-globe"></i> <a href="https://open.spotify.com/episode/0QW2yHDGc9bnermSFzWUMj?si=9bJZxUe4R5Oq5vXsIr6bvg&context=spotify%3Ashow%3A5nuWzV1UZ3RAXeANbm9WKI&t=16e
